--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-tooltip": "0.0.9",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
